# python-chat-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  IMPROVEMENTS.md  README.md  compose.yml  main.py  pyproject.toml  requirements.txt  test_import.py
.github/workflows/: main.yml
config/: logging_config.py  settings.py
scripts/: setup.py
services/: question_generation.py  transcribe.py
tests/: test_main.py
